--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^7.7.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.2"
   },
