--- a/server/package.json
+++ b/server/package.json
@@ -5,5 +5,8 @@
     "dotenv": "^17.0.1",
     "express": "^5.1.0",
     "mongoose": "^8.16.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
