--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "chart.js": "^4.5.0",
+    "chart.js": "^3.9.1",
     "firebase": "^11.10.0",
     "react": "^18.2.0",
-    "react-chartjs-2": "^5.3.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.7.0",
+    "react-router-dom": "6.17.0",
     "react-scripts": "5.0.1",
     "sass": "^1.89.2"
   },
